alteração de regras de negocio - salvar pedido

--- a/src/main/resources/messages_labels.properties
+++ b/src/main/resources/messages_labels.properties
@@ -1,10 +1,17 @@
-app.title=Projeto exemplo: CDI, JSF e EJB3 no CloudBees
+app.title=Projeto Sistema de compras de Produtos (DESAFIO INEMA)
 label.produto.nome=Nome
 label.produto.descricao=Descrição
 label.produto.quantidade=Quantidade
 label.produto.preco=Preço
 label.produtos=produtos
 label.produto=produto
+label.pedido.qtdProdutos=Qtd de Produtos
+label.pedido.preco=Preço Total
+label.pedidos=pedidos
+label.pedidos.total=Preço total:
+label.pedidos.cliente=Cliente:
+label.pedidos.cliente.nome=Nome
+label.pedidos.cliente.endereco=Endereco
 label.sobre=Sobre
 label.sobre.projeto=Projeto
 
@@ -13,7 +20,7 @@ label.incluir=Incluir
 label.editar=Editar
 
 label.yaw=YaW Tecnologia
-label.logo.yaw=Logo da YaW
+label.logo.yaw=Logo do INEMA
 label.detalhes.projeto=<strong>Projeto livre</strong>, demonstração das tecnologias <em>CDI (Context Dependency Injection)</em>, JSF, e <em>EJB 3</em> na plataforma de <strong>cloud computing</strong> (PaaS) <em>CloudBees</em>.
 label.saiba.mais=saiba mais
 
@@ -22,7 +29,8 @@ button.salvar=Salvar
 button.cancelar=Cancelar
 button.excluir=Excluir
 
-menu.lista=<i class="icon-list"></i> Lista
+menu.lista.produtos=<i class="icon-list"></i> Lista Produtos
+menu.lista.pedidos=<i class="icon-list"></i> Lista Pedidos
 menu.incluir=<i class="icon-pencil"></i> Incluir
 menu.sobre=<i class="icon-book"></i> Sobre
 
@@ -32,6 +40,7 @@ page.title.editar.produto=Editar produto
 page.title.sobre=Sobre o projeto
 page.title.app= Sistemas de pedidos (DESAFIO INEMA)
 page.title.pedido=Finalizar Pedido
+page.title.lista.pedido=Lista de Pedidos
 
 excluir.produto.confirma=Confirma a exclusão da produto?
 excluir.produto=Excluir produto
@@ -39,8 +48,12 @@ confirma.sim=Sim
 confirma.nao=Não
 
 msg.erro.salvar.produto=Não foi possível salvar a produto.
+msg.erro.salvar.pedido Não foi possível salvar o pedido
 msg.erro.listar.produto=Não foi possível carregar a lista de produtos.
 msg.erro.remover.produto=Não foi possível remover a produto.
+msg.erro.remover.pedido=Não foi possível remover o pedido
+msg.erro.converter =erro de conversão
+msg.erro.converter.cliente = Não é um cliente válido 
 
 sobre.build=<strong>Implementation-Build:</strong> 350683fd9ad242462ebffb9cb5f565481a4f4991
 sobre.title=<strong>Implementation-Title:</strong> Demo CDI, JSF e EJB 3 no CloudBees
