pedidos salvando com sucesso

--- a/src/main/resources/messages_labels.properties
+++ b/src/main/resources/messages_labels.properties
@@ -8,7 +8,7 @@ label.produto=produto
 label.pedido.qtdProdutos=Qtd de Produtos
 label.pedido.preco=Preço Total
 label.pedidos=pedidos
-label.pedidos.total=Preço total:
+label.pedidos.total=Preço Total:
 label.pedidos.cliente=Cliente:
 label.pedidos.cliente.nome=Nome
 label.pedidos.cliente.endereco=Endereco
@@ -65,3 +65,5 @@ dialog.emexecucao.titulo=Em execução
 dialog.emexecucao.aguarde=Aguarde...
 
 finalizar.compra=Finalizar Compra
+
+msg.info.qtdproduto.excedido=Você ultrapassou a quantidade disponível do produto!
