incluir pedidos pronto - correção de mensagem de erro

--- a/src/main/resources/messages_labels.properties
+++ b/src/main/resources/messages_labels.properties
@@ -5,7 +5,7 @@ label.produto.quantidade=Quantidade
 label.produto.preco=Preço
 label.produtos=produtos
 label.produto=produto
-label.pedido.qtdProdutos=Qtd de Produtos
+label.pedido.qtdProdutos=Qtd Total de Produtos Comprados
 label.pedido.preco=Preço Total
 label.pedidos=pedidos
 label.pedidos.total=Preço Total:
@@ -66,4 +66,4 @@ dialog.emexecucao.aguarde=Aguarde...
 
 finalizar.compra=Finalizar Compra
 
-msg.info.qtdproduto.excedido=Você ultrapassou a quantidade disponível do produto!
+msg.warn.qtdproduto.excedido=Você ultrapassou a quantidade disponível do produto!
