--- a/src/main/resources/messages_labels.properties
+++ b/src/main/resources/messages_labels.properties
@@ -3,11 +3,11 @@ label.produto.nome=Nome
 label.produto.descricao=Descrição
 label.produto.quantidade=Quantidade
 label.produto.preco=Preço
-label.produtos=produtos
-label.produto=produto
+label.produtos=Produtos
+label.produto=Produto
 label.pedido.qtdProdutos=Qtd Total de Produtos Comprados
 label.pedido.preco=Preço Total
-label.pedidos=pedidos
+label.pedidos=Pedidos
 label.pedidos.total=Preço Total:
 label.pedidos.cliente=Cliente:
 label.pedidos.cliente.nome=Nome
@@ -19,10 +19,7 @@ label.listagem=Listagem
 label.incluir=Incluir
 label.editar=Editar
 
-label.yaw=YaW Tecnologia
-label.logo.yaw=Logo do INEMA
-label.detalhes.projeto=<strong>Projeto livre</strong>, demonstração das tecnologias <em>CDI (Context Dependency Injection)</em>, JSF, e <em>EJB 3</em> na plataforma de <strong>cloud computing</strong> (PaaS) <em>CloudBees</em>.
-label.saiba.mais=saiba mais
+label.logo.inema=Logo do INEMA
 
 button.atualizar=Atualizar
 button.salvar=Salvar
