--- a/src/main/resources/messages_labels.properties
+++ b/src/main/resources/messages_labels.properties
@@ -12,8 +12,9 @@ label.pedidos.total=Preço Total:
 label.pedidos.cliente=Cliente:
 label.pedidos.cliente.nome=Nome
 label.pedidos.cliente.endereco=Endereco
-label.sobre=Sobre
-label.sobre.projeto=Projeto
+label.pedido.excluir=Excluir Pedido
+excluir.produto.confirma=Confirma a exclusão do pedido?
+
 
 label.listagem=Listagem
 label.incluir=Incluir
@@ -64,3 +65,5 @@ dialog.emexecucao.aguarde=Aguarde...
 finalizar.compra=Finalizar Compra
 
 msg.warn.qtdproduto.excedido=Você ultrapassou a quantidade disponível do produto!
+msg.warn.qtdproduto.zerado=Um ou mais produtos estão com suas quantidades zeradas.
+msg.warn.qtdproduto.zerado.solucao=Favor escolher um valor acima de 1 
