--- a/src/main/resources/messages_labels.properties
+++ b/src/main/resources/messages_labels.properties
@@ -13,8 +13,7 @@ label.pedidos.cliente=Cliente:
 label.pedidos.cliente.nome=Nome
 label.pedidos.cliente.endereco=Endereco
 label.pedido.excluir=Excluir Pedido
-excluir.produto.confirma=Confirma a exclusão do pedido?
-
+excluir.pedido.confirma=Confirma a exclusão do pedido?
 
 label.listagem=Listagem
 label.incluir=Incluir
