--- a/src/main/resources/messages_labels.properties
+++ b/src/main/resources/messages_labels.properties
@@ -5,6 +5,8 @@ label.produto.quantidade=Quantidade
 label.produto.preco=Preço
 label.produtos=Produtos
 label.produto=Produto
+label.produto.Acao=Ação
+label.produto.editar=Editar
 label.pedido.qtdProdutos=Qtd Total de Produtos Comprados
 label.pedido.preco=Preço Total
 label.pedidos=Pedidos
@@ -29,7 +31,6 @@ button.excluir=Excluir
 menu.lista.produtos=<i class="icon-list"></i> Lista Produtos
 menu.lista.pedidos=<i class="icon-list"></i> Lista Pedidos
 menu.incluir=<i class="icon-pencil"></i> Incluir
-menu.sobre=<i class="icon-book"></i> Sobre
 
 page.title.lista.produto=Lista de produtos
 page.title.incluir.produto=Incluir produto
@@ -48,15 +49,10 @@ msg.erro.salvar.produto=Não foi possível salvar a produto.
 msg.erro.salvar.pedido Não foi possível salvar o pedido
 msg.erro.listar.produto=Não foi possível carregar a lista de produtos.
 msg.erro.remover.produto=Não foi possível remover a produto.
+msg.erro.remover.produto.excluir.pedido=Favor excluir o pedido vinculado ao produto primeiro.
 msg.erro.remover.pedido=Não foi possível remover o pedido
 msg.erro.converter =erro de conversão
 msg.erro.converter.cliente = Não é um cliente válido 
-
-sobre.build=<strong>Implementation-Build:</strong> 350683fd9ad242462ebffb9cb5f565481a4f4991
-sobre.title=<strong>Implementation-Title:</strong> Demo CDI, JSF e EJB 3 no CloudBees
-sobre.site=<strong>Implementation-Site:</strong> http://www.yaw.com.br
-sobre.built=<strong>Built-by:</strong> YaW Tecnologia
-
 
 dialog.emexecucao.titulo=Em execução
 dialog.emexecucao.aguarde=Aguarde...
@@ -65,4 +61,5 @@ finalizar.compra=Finalizar Compra
 
 msg.warn.qtdproduto.excedido=Você ultrapassou a quantidade disponível do produto!
 msg.warn.qtdproduto.zerado=Um ou mais produtos estão com suas quantidades zeradas.
-msg.warn.qtdproduto.zerado.solucao=Favor escolher um valor acima de 1 
+msg.warn.qtdproduto.zerado.solucao=Favor escolher um valor acima de 1.
+ 
